<resources>
    <string name="app_name">UIDesignKotlin</string>
    <string name="test">This is a mock</string>
    <string name="Try">Try Something New</string>
    <string name="Collection">Your Collection</string>
    <string name="Recent">Recently Played</string>
    <string name="News">News</string>
    <string name="discover_a_vast_haunted_kingdom_in_hollow_knight_silksong_explore_fight_and_survive_as_you_ascend_to_the_peak_of_a_land_ruled_by_silk_and_song">Discover a vast, haunted kingdom in Hollow Knight: Silksong! Explore, fight and survive as you ascend to the peak of a land ruled by silk and song.</string>
    <string name="play">PLAY</string>
    <string name="silksong">SILKSONG</string>
    <string name="newsTitle">Indie hit continues the mythic saga with Melnak, the daughter of Hades</string>
    <string name="newsDescription">Supergiant Games has unveiled the latest technical test update for Hades II, bringing significant improvements to the highly anticipated sequel. The early access roguelike continues to build on its predecessor\'s foundation while introducing fresh mechanics and narrative elements that expand the mythological universe.</string>
    <string name="news_header_image">News header image</string>
    <string name="news_date">30/09/2025</string>
    <string name="game_release_date">Game Release Date</string>
    <string name="release_date_september">September 25</string>
</resources>