<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    tools:ignore="ExtraText">

    <ScrollView
        android:id="@+id/Bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/SubBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/background">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <Button
                android:id="@+id/menuBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/menu"
                app:layout_constraintBottom_toBottomOf="@id/Bg"
                app:layout_constraintEnd_toEndOf="@id/Bg"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="@id/Bg"
                app:layout_constraintTop_toTopOf="@id/Bg"
                app:layout_constraintVertical_bias="0.023" />
            <TextView
                android:id="@+id/Try"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Try"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/menuBtn"
                app:layout_constraintStart_toStartOf="@+id/Bg"
                app:layout_constraintEnd_toEndOf="@id/Bg"
                app:layout_constraintHorizontal_bias="0.15"
                android:padding="16dp"
                />
            <HorizontalScrollView
                android:id="@+id/TryImg"
                android:layout_width=""
                android:layout_height="" />
            <TextView
                android:id="@+id/Collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Collection"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/menuBtn"
                app:layout_constraintStart_toStartOf="@+id/Bg"
                app:layout_constraintEnd_toEndOf="@id/Bg"
                app:layout_constraintHorizontal_bias="0.15"
                android:padding="16dp"
                />
            <HorizontalScrollView
                android:id="@+id/CollectionImg"
                android:layout_width=""
                android:layout_height="" />
            <TextView
                android:id="@+id/Recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Recent"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/menuBtn"
                app:layout_constraintStart_toStartOf="@+id/Bg"
                app:layout_constraintEnd_toEndOf="@id/Bg"
                app:layout_constraintHorizontal_bias="0.15"
                android:padding="16dp"
                />
            <HorizontalScrollView
                android:id="@+id/RecentImg"
                android:layout_width=""
                android:layout_height="" />
            <TextView
                android:id="@+id/News"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/News"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/menuBtn"
                app:layout_constraintStart_toStartOf="@+id/Bg"
                app:layout_constraintEnd_toEndOf="@id/Bg"
                app:layout_constraintHorizontal_bias="0.15"
                android:padding="16dp"
                />
            <HorizontalScrollView
                android:id="@+id/NewsImg"
                android:layout_width=""
                android:layout_height="" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/SubBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/navbar"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/Bg"
        app:layout_constraintStart_toStartOf="@id/Bg">
        <Button
            android:id="@+id/search"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/search"
            android:layout_marginEnd="24dp" />
        <Button
            android:id="@+id/user"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/user"
            android:layout_marginEnd="24dp" />
        <Button
            android:id="@+id/home"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/home"
            android:layout_marginEnd="24dp" />
        <Button
            android:id="@+id/share"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/share"
            android:layout_marginEnd="24dp" />
        <Button
            android:id="@+id/settings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/settings" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>